Add new project

--- a/View/BanAnAdmin.resx
+++ b/View/BanAnAdmin.resx
@@ -154,6 +154,16 @@
         mTIrrdYfpd/exfAbp7wAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAOtJREFUWEftl90NwjAMhDNGkNOfERiBURipG8AmMAKbMALEkS1FVahCHPrCfdJJ
+        yaU930P6UAcA+CGBpleN5PG+eD/P5IfzlkplSiq9m4tnydh6iOoLWMWzZGw9KJipqaAy0HjVoLi+iN1M
+        7zwUFLudrUDeq0IIJ7Edr/MzsRNxv19B9Vn5RV9/YGInUFDshPosFPwEClpBQSsoaAUFraCgla1ALqKa
+        I2I7XudnYid2LdjCfxeMupV+vL8RZ2hel4KBxkUDe4sO4yJj2uELP4TpWRpgEWdytoyxEXOOMfSxHmLQ
+        nTMlHgDQjnNvM8hPw+jLPXgAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnXemlichsudatban.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
